--- a/index.html
+++ b/index.html
@@ -1162,7 +1162,7 @@
           <a href="" class="logo">MOMO's Hunt<span class="span">.</span></a>
 
           <p class="footer-text">
-            Financial experts support or help you to to find out which way you can raise your funds more.
+            Web solution with us is the best thing you will be doing right now.
           </p>
 
           <ul class="social-list">
@@ -1202,15 +1202,15 @@
           </li>
 
           <li>
-            <p class="footer-list-item">+1 (062) 109-9222</p>
+            <p class="footer-list-item">+9779845429494</p>
           </li>
 
           <li>
-            <p class="footer-list-item">Info@YourGmail24.com</p>
+            <p class="footer-list-item">rites.nepali@gmail.com</p>
           </li>
 
           <li>
-            <address class="footer-list-item">111 Parramatta Rd, Granville NSW 2142, Australia</address>
+            <address class="footer-list-item">Birgunj, Nepal</address>
           </li>
 
         </ul>
@@ -1275,7 +1275,7 @@
     <div class="footer-bottom">
       <div class="container">
         <p class="copyright-text">
-          &copy; 2024 <a href="#" class="copyright-link">riteshnepali</a> All Rights Reserved.
+          &copy; 2024 <a href="#" class="copyright-link">riteshnepali 9845429494</a> All Rights Reserved.
         </p>
       </div>
     </div>
